--- a/hedera-mirror-importer/pom.xml
+++ b/hedera-mirror-importer/pom.xml
@@ -27,6 +27,16 @@
             <artifactId>caffeine</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-bigquery</artifactId>
+            <version>1.96.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.http-client</groupId>
+            <artifactId>google-http-client</artifactId>
+            <version>1.32.1</version>
+        </dependency>
+        <dependency>
             <groupId>com.hedera.hashgraph</groupId>
             <artifactId>hedera-protobuf-java-api</artifactId>
             <version>${hedera-protobuf.version}</version>
