--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
         <jib.version>2.2.0</jib.version>
         <jmeter.version>5.2.1</jmeter.version>
         <micrometer-jvm-extras.version>0.2.0</micrometer-jvm-extras.version>
+        <nats.version>2.6.8</nats.version>
         <protobuf.version>3.11.1</protobuf.version>
         <release.version>${project.version}</release.version> <!-- Used to replace release versions in all files -->
         <release.chartVersion>0.3.0</release.chartVersion>
